--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-uglify": "^3.0.2"
   },
   "devDependencies": {
